--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="coming-soon-container">
         <h1>ARTISTIQ</h1>
 <br><br><br><br>
-        <p>professional creative<p>contract analysis</p>
+        <p>professional<p>creative contract<p>analysis</p>
     </div>
 
 </body>
